testPages/tv.css
/*! Generated by Font Squirrel (https://www.fontsquirrel.com) on April 20, 2024 */

*
{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    /* border: 1px solid */
}

body
{
    background-color: #0e131f;
    color: #9e9e9e;
    font-family: 'amaranthregular', sans-serif;
}

a
{
    color: #9e9e9e;
    text-decoration: none;
}

nav
{
    /* border: 1px solid; */
    border-bottom: 1px solid;
}

.container
{
    /* border: 1px solid; */
    max-width: 1350px;
    margin: 0 auto;
    padding: 10px 50px;
}

.container-flex
{
    /* border: 1px solid; */
    padding: 10px;
    display: flex;
    flex-wrap: wrap;
}








nav
.container-flex
{
    display: flex;
    justify-content: space-between;
}

div.logo
{
    /* border: 1px solid; */
    flex: 1 1 auto;
    display: flex;
}

div.logo
a
{
    /* border: 1px solid; */
    font-family: 'after_shokregular', '3dumbregular', 'amaranthregular', serif;
    display: flex;
    align-items: center;
    font-size: 25px;
    color: #fff;
}

.nav-list
{
    /* border: 1px solid; */
    flex: 1 4 auto;
    display: flex;
    justify-content: flex-end;
}

.nav-list-flex
{
    /* border: 1px solid; */
    flex: 1;
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    align-items: center;
}

.nav-list-flex
a
{
    /* border: 1px solid; */
    padding: 4px 4px 0px 4px;
    font-size: 18px;
    margin: 0 5px;
    display: flex;
}

.nav-list-flex
a:last-child
{
    /* border: 1px solid; */
    padding: 8px 16px;
    background-color: #0f766e;
    color: #fff;
    border-radius: 8px;
}

.nav-list-flex
a.mode
{
    /* border: 1px solid; */
    width: 30px;
    padding: 0;
    display: flex;
    justify-content: space-around;
}

.nav-list-flex
a.mode svg
{
    width: 25px;
    color: #c5c3c3;
}

.nav-list-flex
a.hover:hover
{
    border-bottom: 2px solid silver;
    color: #fff;
}

.nav-list-flex
a:last-child:hover
{
    background-color: #0e635c;
}

.nav-list-flex
a.mode
svg:hover
{
    fill: #fff;
}

.nav-list-flex
.fa-bars
{
    display: none;
}










@media screen and (max-width: 1000px)
{
    .container
    {
        padding: 0;
        /* background-color: red; */
    }

    div.logo
    a
    {
        font-family: 'after_shokregular', '3dumbregular', 'amaranthregular', serif;
        color: #fff; 
        font-size: 20px;
    }

    .nav-list-flex
    a
    {
        font-size: 16px;
    }
}

@media screen and (max-width: 766px)
{
    *
    {
        /* border: 1px solid; */
    }

    .container
    {
        /* background-color: red; */
    }

    .nav-list-flex
    a,
    a.mode svg
    {
        display: none;
    }

    .nav-list-flex
    {
        /* border: 1px solid; */
        justify-content: flex-end;
    }

    .nav-list-flex
    .fa-bars
    {
        display:block;
        margin-right: 20px;
        font-size: 20px;
        padding: 10px;
        border-radius: 5px;
        color: #c5c3c3;
    }

    .nav-list-flex
    .fa-bars:hover
    {
        background-color: #fffcfc3f;
    }
}

